@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use ftw.testbrowser for testing.
+  [mathias.leimgruber]
 
 
 1.0.1 (2013-05-24)
